# ROS2_LiDAR_Camera_detection

./: README.md
src/cluster_msgs/: CMakeLists.txt  package.xml
src/cluster_msgs/msg/: Cluster.msg  ClusterArray.msg
src/comparison/: CMakeLists.txt  package.xml
src/comparison/include/comparison/: comparison_node.hpp
src/comparison/launch/: launch.py
src/comparison/rviz/: comparison_algorithm.rviz
src/comparison/src/: VD.cpp  comparison.cpp  comparison_node.cpp
src/distance_estimation/: CMakeLists.txt  package.xml
src/distance_estimation/include/distance_estimation/: distance_estimation_node.hpp
src/distance_estimation/src/: distance_estimation.cpp  distance_estimation_node.cpp  plot_example.cpp
src/lidar_clustering/: CMakeLists.txt  package.xml
src/lidar_clustering/include/lidar_clustering/: lidar_clustering_node.hpp
src/lidar_clustering/src/: lidar_clustering.cpp  lidar_clustering_node.cpp
src/lidar_detection/: 0000000123.txt  CMakeLists.txt  package.xml
src/lidar_detection/include/lidar_detection/: lidar_detection_node.hpp
src/lidar_detection/src/: lidar_detection.cpp  lidar_detection_node.cpp
src/preprocessing/: CMakeLists.txt  package.xml
src/preprocessing/include/preprocessing/: preprocessing_node.hpp
src/preprocessing/src/: preprocessing.cpp  preprocessing_node.cpp
src/yolov8_msgs/: CMakeLists.txt
src/yolov8_msgs/msg/: BoundingBoxCenter.msg  BoundingBoxCenterArray.msg
src/yolov8_ros/yolov8_bringup/: CMakeLists.txt  package.xml
src/yolov8_ros/yolov8_bringup/launch/: yolov8.launch.py  yolov8_3d.launch.py
src/yolov8_ros/yolov8_ros/yolov8_ros/: 0000000123.txt  ROS2_projection.py  debug_node.py  msg_to_pcd.py  projection.py  yolov8_node.py
